# switchboard-plug-sound

./: .travis.yml  CMakeLists.txt  README.md  config.vala.cmake  meson.build
.github/workflows/: gettext.yml  main.yml
data/: icons.gresource.xml  meson.build  sound.appdata.xml.in  sound.gschema.xml  sound.metainfo.xml.in
debian/: changelog  control  copyright  rules
debian/patches/: revert-untranslated-search-strings.patch  series
po/: POTFILES  af.po  ak.po  am.po  an.po  ar.po  as.po  az.po  ba.po  be.po  bg.po  bn.po  bs.po  btk.po  ca.po  ckb.po  cs.po  cu.po  da.po  de.po  ee.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  fy.po  gl.po  he.po  hi.po  ho.po  hr.po  (+65 more)
po/extra/: LINGUAS  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: App.vala  AppRow.vala  ApplicationsPanel.vala  CMakeLists.txt  CanberraGtk4.vala  Device.vala  DeviceRow.vala  InputDeviceMonitor.vala  InputPanel.vala  OutputPanel.vala  Plug.vala  PulseAudioManager.vala  TestPopover.vala  meson.build
vapi/: libpulse-ext.vapi  libpulse.vapi
